// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogListItem Snapshots when loading matches snapshot 1`] = `
<smart-link-stub
  aria-hidden="true"
  class="BlogItem BlogItem--gray BlogItem--loading"
  to="[object Object]"
>
  <div
    class="BlogItem-container"
  >
    <div
      class="BlogItem-date"
    >
      <span
        class="BlogItem-publishMonth"
      >
        
      </span>
       
      <span
        class="BlogItem-publishDay"
      >
        
      </span>
       
      <span
        class="BlogItem-publishYear"
      >
        
      </span>
    </div>
     
    <div
      class="BlogItem-text"
    >
      <h3
        aria-hidden="true"
        class="BlogItem-title h5"
      >
        blog title
      </h3>
       
      <p
        aria-hidden="true"
        class="BlogItem-preamble"
      >
        blog preamble
      </p>
       
      <p
        class="BlogItem-viewMore"
      >
        <!---->
         
        <!---->
      </p>
    </div>
  </div>
</smart-link-stub>
`;

exports[`BlogListItem Snapshots with data matches snapshot 1`] = `
<smart-link-stub
  class="BlogItem BlogItem--gray"
  to="[object Object]"
>
  <div
    class="BlogItem-container"
  >
    <div
      class="BlogItem-date"
    >
      <span
        class="BlogItem-publishMonth"
      >
        Apr
      </span>
       
      <span
        class="BlogItem-publishDay"
      >
        25
      </span>
       
      <span
        class="BlogItem-publishYear"
      >
        2018
      </span>
    </div>
     
    <div
      class="BlogItem-text"
    >
      <h3
        class="BlogItem-title h5"
      >
        blog title
      </h3>
       
      <p
        class="BlogItem-preamble"
      >
        blog preamble
      </p>
       
      <p
        class="BlogItem-viewMore"
      >
        <span>
          View more |
        </span>
         
        <readingtime-stub
          text=""
          wordsperminute="250"
        />
      </p>
    </div>
  </div>
</smart-link-stub>
`;
